test/Fail/BuiltinInfinityBadType.err
BuiltinInfinityBadType.agda:8.22-23: error: [UnequalTypes]
The types
  Set (lsuc a)
and
  Set a
are not equal
when checking that the expression ∞ has type Set a → Set a
